--- a/style.css
+++ b/style.css
@@ -39,3 +39,12 @@ body{
     border-radius: 15px;
 }
 
+.details{
+    text-align: center;
+    margin-bottom: 100px;
+}
+
+.single-lyrics{
+    margin-bottom: 100px;
+}
+
